# portfolio

./: .gitignore  README.md
AWS/Cloud_Data_Pipeline/: .gitignore  4B25.ipynb  README.md
AWS/Cloud_Data_Pipeline/create_reports/: Dockerfile  main.py  requirements.txt
AWS/Cloud_Data_Pipeline/db_restore/: Dockerfile  restore.sh
AWS/Cloud_Data_Pipeline/terraform_config/: ecs.tf  main.tf  network.tf  outputs.tf  rds.tf  s3.tf  variables.tf
Airflow/M3Capstone-Football_data_pipeline/: .gitignore  341.ipynb  Dockerfile  README.md  docker-compose.yaml  init.sql  requirements.txt
Airflow/M3Capstone-Football_data_pipeline/dbt_football/: dbt_project.yml
Airflow/M3S1-Airflow_pipeline/: .gitignore  315.ipynb  Dockerfile  README.md  docker-compose.yaml  init.sql  requirements.txt
Python/M1Capstone-NetflixDatabase/: README.md  data_transformation.ipynb  main.py  requirements.txt
Python/M1S1-DiceGenerator/: README.md  generator.py
Python/M2Capstone-Metal_pipeline/: .gitignore  241.ipynb  README.md  compose.yaml
Python/M2S1-DataTransformationLibrary/: README.md
Python/M2S1-DataTransformationLibrary/tc_datatransformationlibrary/: README.md  pyproject.toml
Python/M2S1-DataTransformationLibrary/tc_datatransformationlibrary/src/: tc_datatransformationlibrary.py
Python/M2S2-WeatherDataPipeline/: .gitignore  README.md  requirements.txt
dbt/M3S2-Data_Modeling_Blogpost/: .gitignore  335.ipynb  README.md  docker-compose.yaml  init.sql
dbt/M3S2-Formula1_Data_Pipeline/: .gitignore  Dockerfile  README.md  docker-compose.yaml  init.sql  requirements.txt
(+130 files in other folders)
